# Generalized-Frangi-for-Automatic-Crack-Extraction-on-FIND-dataset

./: .geminiignore  .gitignore  CITATION.cff  FIND_Frangi_Fusion_Avignon_Colab.ipynb  FIND_Frangi_Fusion_Betweenness_Colab.ipynb  FIND_Frangi_Fusion_Colab.ipynb  LICENSE  MANIFEST.in  README.md  README2.md  agents.md  batch_code.txt  build_raphael_notebook.py  build_vt_graf_notebook.py  main.tex  modify_notebook.py  noise_code.txt  pyproject.toml  requirements.txt  setup.cfg  test_fast_filter.py  test_k2_clean.py  test_k2_script.py  tmp.py  update_notebook.py  update_viz_cell.py
CrackForest/: Frangi_CrackForest_GPU.ipynb  build_notebook.py  frangi_généralisé_gretsi.py
Gauthier_Cerema/: README.md  Test_Gauthier_Cerema.ipynb  graph_builder.py  run_steger_analysis.py  steger_gpu.py
IRT-Crack Segmentation/: Frangi_IRT_Crack_GPU.ipynb  README.md  build_notebook.py  notebook_content.py
ISPRS/: implementation_notes.md
ISPRS/CrackSAM/: CrackSAM_Benchmark_Colab.ipynb  README.md  README_SAM2.md  analyze_frangi_chrominance_cpu.py  clean_legends.py  compute_exact_wasserstein.py  crop_fissures.py  evaluate_sam2.py  generate_frangi_milestone_report.py  generate_frangi_preprocessing_gallery.py  precompute_all_cracksam2_prompts.sh  prepare_cracksam2_data.py  (+11 more)
Raphael/: Frangi_Raphael_GPU.ipynb
VT-GraF/: Frangi_VT_GraF_GPU.ipynb
gcp-migration/: .env.example  README.md  blackwell_preflight.sh  check_capacity.sh  check_quotas.sh  deploy.sh  start_and_verify.sh  stop_and_verify.sh
notebooks/: FIND_Frangi_Fusion_Colab.ipynb
scripts/: run_batch_find.py  run_noise_test_colab.py
(+140 files in other folders)
