[metadata]
name = frangi-fusion
version = 0.1.0
license = MIT
description = Generalized Frangi with multi-modal fusion on FIND
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    scipy
    scikit-image
    matplotlib
    joblib
    tqdm
    tqdm-joblib
    hdbscan
    networkx
    gdown
    tifffile
    imageio
    pandas
    Pillow
    pot
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    frangi-find-batch = frangi_fusion.cli:main
